# src/api/controllers/git.ts
@@ -133,6 +133,16 @@ interface IGithubAccount {
 
 }
 
+interface IGithubHookHeaders {
+  host: string;
+  accept: string;
+  'user-agent': string;
+  'x-github-event': string;
+  'x-github-delivery': string;
+  'content-type': string;
+  'x-hub-signature': string;
+}
+
 module.exports = {
   push,
   getCurrentVersion,
@@ -140,15 +150,17 @@ module.exports = {
 
 function push(req: ISwaggerRequest, res: ISwaggerResponse) {
   console.log('github webhook triggered !');
-  console.log(req);
-  const githubEvent: IGithubHookContent = req.body;
+  console.log('headers: ');
+  console.log(JSON.stringify(req.headers, null, 4));
+  console.log('\n\n\n');
+  const githubEventInformation: IGithubHookContent = req.swagger.params.webhookInformation.value;
   // - githubEvent.head_commit is the last (and frequently the only) commit
   // - githubEvent.pusher is the user of the pusher pusher.name and pusher.email
   // - timestamp of final commit: githubEvent.head_commit.timestamp
   // - branch:  githubEvent.ref (refs/heads/master)
 
-  console.log('WebHook Push Event: ');
-  console.log(JSON.stringify(githubEvent, null, 4));
+  console.log('content: ');
+  console.log(JSON.stringify(githubEventInformation, null, 4));
 
   const response = {received: true};
   if (!res.headersSent) { return res.status(200).json(response); }
